chore(lighthouse): add meta tag description

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="apple-touch-icon" href="./logo.png">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#fafafa">
+  <meta name="description" content="Curated search engine for feminist events and media">
 </head>
 <body>
   <app-root></app-root>
