--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,11 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#fafafa">
   <meta name="description" content="Curated search engine for feminist events and media">
+  <script async src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.2/lazysizes.min.js"
+          crossorigin="anonymous"></script>
 </head>
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<app-root></app-root>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
