chore: update theme color

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="./logo.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#fffff">
   <meta name="description" content="Curated search engine for feminist events and media">
   <script async src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.2/lazysizes.min.js"
           crossorigin="anonymous"></script>
