chore(lighthouse): preconnect to required origins

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="./logo.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preconnect" href="https://apis.google.com">
+  <link rel="preconnect" href="https://fem-readup.firebaseapp.com">
+  <link rel="preconnect" href="https://firestore.googleapis.com">
   <meta name="theme-color" content="#fffff">
   <meta name="description" content="Curated search engine for feminist events and media">
   <script async src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.2/lazysizes.min.js"
