--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://apis.google.com">
   <link rel="preconnect" href="https://fem-readup.firebaseapp.com">
   <link rel="preconnect" href="https://firestore.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&display=swap" rel="stylesheet">
   <meta name="theme-color" content="#fffff">
   <meta name="description" content="Curated search engine for feminist events and media">
   <script async src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.2/lazysizes.min.js"
